--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@ project(imgui VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_library(imgui SHARED imgui.cpp examples/imgui_impl_glfw.cpp examples/imgui_impl_opengl3.cpp)
+add_library(imgui SHARED
+        imgui.cpp
+        imgui_demo.cpp
+        imgui_draw.cpp
+        imgui_widgets.cpp)
 
 target_include_directories(imgui PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
